# messages-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  release.toml
.github/workflows/: docker-publish.yml  docker-test-gcp.yml
messages-ui/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
messages-ui/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
messages-ui/src/components/: Home.jsx  Home.tsx
messages-ui/src/components/Layout/: AppLayout.jsx  AppLayout.tsx  Sidebar.jsx  Sidebar.tsx
messages-ui/src/components/Layout/common/: ContentCard.tsx  EditorContainer.tsx  PageContainer.tsx
messages-ui/src/components/MessageValidator/: MessageValidator.jsx  MessageValidator.tsx
messages-ui/src/components/RuleLogicValidator/: RuleLogic.tsx  index.ts
messages-ui/src/components/Validators/: FedNowValidator.jsx  FedNowValidator.tsx  ISO20022Validator.jsx  ISO20022Validator.tsx
messages-ui/src/components/common/: EditorPanel.tsx  ResultsPanel.tsx
messages-ui/src/components/rule-logic/: RuleLogic.tsx
messages-ui/src/config/: monacoConfig.ts
messages-ui/src/constants/samples/: ruleLogic.ts
src/: lib.rs  main.rs
src/handlers/: logic_engine.rs  mod.rs  validate.rs
src/models/: messages.rs
static/: index.html
static/assets/: index-0KOqZZY-.css
static/js/: index-BmKMUXZS.js  index-CD8NX23d.js  index-DM1TwCER.js  index-DQWHtdTh.js  index-DU2lhbVP.js  index-yGbpBAFF.js
