[package]
name = "messages-api"
version = "0.1.18"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 0
debug = 0

[dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
serde_path_to_error = "0.1"
xml-rs = "0.8"
open-payments-iso20022 = { version = "1.0.2", features = ["payments", "derive_serde", "derive_debug", "derive_default"] }
open-payments-fednow = { version = "1.0.2", features = ["derive_serde", "derive_debug", "derive_default"] }
samplify-rs = "0.1.5"

